--- a/main/templates/data_list.html
+++ b/main/templates/data_list.html
@@ -22,5 +22,6 @@
         <p>자료가 없습니다.</p>
     {% endif %}
     <a href="{% url 'main:data_add' %}">상품추가</a><br>
+    <a href="{% url 'main:home' %}">main으로 돌아가기</a><br>
 </body>
 </html>
