--- a/main/templates/product_detail.html
+++ b/main/templates/product_detail.html
@@ -6,6 +6,27 @@
     {% endif %}
     <br>
     <h1>상품명 : {{ post.name }}</h1>
+    {% if post.image %}
+
+        <img src="{{ post.image.url }}">
+
+    {% endif %}
     <p>가격 : {{ post.charge }}</p>
-    <a href="{% url 'main:home' %}">HOME</a>
+
+    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+
+    <form action="{% url 'main:vote' post.code %}" method="POST"> <!--submit을 눌렀을 때 해당 url로 넘어감-->
+        {% csrf_token %} <!--해킹 방지-->
+        {% for choice in post.choice_set.all %}
+            <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}"> <!--submit을 누르면 value값이 넘어감-->
+            <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+        {% endfor %}
+        <input type="submit" value="Vote">
+    </form>
+    {% for review in review_list %}
+        <p>댓글{{ oder }} : {{ review.review_text }}</p>
+    {% endfor %}
+    <a href="{% url 'main:home' %}">main으로 돌아가기</a>
+    <a href="{% url 'main:review' post.code %}">댓글달기</a>
+
 {% endblock %}
