--- a/main/templates/review.html
+++ b/main/templates/review.html
@@ -1,9 +1,10 @@
 {% block content %}
-    <h2>Upload BAR-CODE</h2>
+    <h2>Upload image</h2>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form }}
-        <button type="submit">검색</button>
+        
+        <button type="submit">댓글 등록</button>
     </form>
     <br><br>
 
