--- a/main/templates/upload_img.html
+++ b/main/templates/upload_img.html
@@ -3,7 +3,8 @@
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form }}
-        <button type="submit">Upload</button>
+        
+        <button type="submit">검색</button>
     </form>
     <br><br>
 
