--- a/main/templates/review.html
+++ b/main/templates/review.html
@@ -1,9 +1,7 @@
 {% block content %}
-    <h2>Upload image</h2>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form }}
-        
+        {{ form.as_p }}
         <button type="submit">댓글 등록</button>
     </form>
     <br><br>
