--- a/main/templates/upload_img.html
+++ b/main/templates/upload_img.html
@@ -1,12 +1,19 @@
+{% extends 'blog/base.html' %}
 {% block content %}
-    <h2>Upload image</h2>
+&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp 
+<br><br>
+<center>
+    <img src= "/static/img/sch.png" alt="사진검색"width="180"></img>
+    <br><br><br>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form }}
         
-        <button type="submit">검색</button>
+     <button type="submit" class="btn btn-danger" style="">비교하기</button>
+
     </form>
-    <br><br>
+    <br><br><br><br> <br><br><br><br> <br><br><br><br>
+</center>
 
     
-{% endblock %}
+{% endblock content %}
