--- a/main/templates/blog/base.html
+++ b/main/templates/blog/base.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -16,7 +15,7 @@
               <a href="{% url 'main:index' %}"><img src= "/static/img/logo.png" alt="로고"width="220"  ></img></a>
               <a href="{% url 'main:home' %}"><img src= "/static/img/home.png" alt="홈페이지"width="75"  ></img></a>
               <a href="{% url 'main:introduce' %}"><img src= "/static/img/intro.png" alt="소개"width="35"  ></img></a>
-              <a href=""><img src= "/static/img/pan.png" alt="게시판"width="100"  ></img></a>
+              <a href=""><img src= "/static/img/total.png" alt="게시판"width="100"  ></img></a>
               &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp 
               &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp
               &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp
