--- a/main/templates/blog/base.html
+++ b/main/templates/blog/base.html
@@ -15,11 +15,11 @@
               <a href="{% url 'main:index' %}"><img src= "/static/img/logo.png" alt="로고"width="220"  ></img></a>
               <a href="{% url 'main:home' %}"><img src= "/static/img/home.png" alt="홈페이지"width="75"  ></img></a>
               <a href="{% url 'main:introduce' %}"><img src= "/static/img/intro.png" alt="소개"width="35"  ></img></a>
-              <a href=""><img src= "/static/img/total.png" alt="게시판"width="100"  ></img></a>
+              <a href="{% url 'main:cal_result' %}"><img src= "/static/img/total.png" alt="열량계산"width="100"  ></img></a>
               &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp 
               &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp
               &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp
-              <a><img src= "/static/img/main.png" alt="메인"width="1500"  ></img></a>  
+              <a><img src= "/static/img/main.png" alt="메인"width="1870"  ></img></a>  
                 <form class="form-inline">
                   <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
