--- a/main/templates/upload_img.html
+++ b/main/templates/upload_img.html
@@ -12,6 +12,9 @@
      <button type="submit" class="btn btn-danger">비교하기</button>
 
     </form>
+    {% if message %}
+        {{ message }}
+    {% endif %}
     <br><br><br><br> <br><br><br><br> <br><br><br><br>
 </center>
 
