--- a/main/templates/upload_img_total.html
+++ b/main/templates/upload_img_total.html
@@ -12,7 +12,11 @@
         
      <button type="submit" class="btn btn-danger">비교하기</button>
      <br><br>
-     <img src= "/static/img/notice.png" alt="사진검색"width="300"></img>
+    {% if message %}
+        {{ message }}
+    {% endif %}
+    <br>
+    <img src= "/static/img/notice.png" alt="사진검색"width="300"></img>
     </form>
     <br><br><br><br> <br><br><br><br> <br><br><br><br>
 
