--- a/main/templates/upload_text.html
+++ b/main/templates/upload_text.html
@@ -12,6 +12,9 @@
 
         <button type="submit" class="btn btn-danger">검색하기</button>
     </form>
+    {% if message %}
+        {{ message }}
+    {% endif %}
     <br><br><br><br> <br><br><br><br> <br><br><br><br>
 </center>
 
