--- a/main/templates/introduce.html
+++ b/main/templates/introduce.html
@@ -1,3 +1,4 @@
+
 {% extends 'blog/base.html' %}
 {% block content %}
 
@@ -5,15 +6,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>스마트코드?</title>
+    <style>
+        .container {
+            width:100vw;
+            height:100vh;
+        } 
+        img {
+          max-width: 100%;
+          height: auto !important;
+        }
+    </style>
 </head>
 
 <body>
     <br><br>
     <div class="container">
    
-       <img src= "/static/img/what.png" alt="스마트코드란"width="150"  ></img>
+       <img src= "/static/img/what.png" alt="스마트코드란"width="350"  ></img>
        <br><br><br><br>
-        <img src= "/static/img/def.png" alt="정의"width="600"  ></img>
+        <img src= "/static/img/def.png" alt="정의"width="1200"  ></img>
         <br><br><br><br> <br><br><br><br> <br><br><br><br>
     
     
