--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -13,6 +13,12 @@
 
     
     <title>SMART CODE</title>
+    <style>
+        img {
+          max-width: 100%;
+          height: auto !important;
+        }
+    </style>
  
     </head>
 <body>
@@ -23,7 +29,7 @@
     
     <a href="{% url 'main:home' %}"><img src= "/static/img/start.png" alt="시작하기" width=300></img></a>
     
-    </center>>
+    </center>
 
 </body>
 </html>
