--- a/main/templates/cal_result.html
+++ b/main/templates/cal_result.html
@@ -25,7 +25,7 @@
         <tbody>
         <tr>
             <td><h1>{{ result1 }}g</h1></td>
-            <td><h1>{{ result2 }}g</h1></td>
+            <td><h1>{{ result2 }}kcal</h1></td>
             <td><h1>{{ result3 }}g</h1></td>
             <td><h1>{{ result4 }}g</h1></td>
             <td><h1>{{ result5 }}g</h1></td>
