--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -27,14 +27,14 @@
         <a href="{% url 'main:upload_image'%}"><img src= "/static/img/photosc.png"  alt="이미지 업로드" style="max-width: 20%; height:auto;" ></img></a>
         <a href="{% url 'main:upload_code' %}"><img src= "/static/img/codesc.png"   alt="이미지 업로드" style="max-width: 20%; height:auto;" ></img></a>
         <a href="{% url 'main:result' %}"><img src= "/static/img/sumsc.png"  alt="이미지 업로드" style="max-width: 20%; height:auto;" ></img></a>
-        </center>
+        
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
 
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    
-    <img src= "/static/img/product.png" alt="제품"width="55"  >
+    <img src= "/static/img/product.png" alt="제품"width="200"  ></center>
+
     <br><br>
     <div class="row">
     {% if code_list %}
