--- a/main/templates/product_detail.html
+++ b/main/templates/product_detail.html
@@ -69,7 +69,7 @@
                 <tbody>
                 <tr>
                     <td>{{ post.total }}g</td>
-                    <td>{{ post.kcal }}g</td>
+                    <td>{{ post.kcal }}kcal</td>
                     <td>{{ post.carbo }}g</td>
                     <td>{{ post.sugar }}g</td>
                     <td>{{ post.protein }}g</td>
