--- a/main/templates/upload_img_total.html
+++ b/main/templates/upload_img_total.html
@@ -10,7 +10,7 @@
         {% csrf_token %}
         {{ form }}
         
-     <button type="submit" class="btn btn-danger">비교하기</button>
+     <button type="submit" class="btn btn-danger">계산하기</button>
      <br><br>
     {% if message %}
         {{ message }}
