Create image for test

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -15,7 +15,7 @@
         .card {
             height: 100%;
             margin: 5%;
-            border: 2px solid #73AD21;
+            border: 2px solid #E50113;
         }
     </style>
 </head>
@@ -33,7 +33,7 @@
     <br><br>
     <br><br>
 
-    <img src= "/static/img/product.png" alt="제품"width="200"  ></center>
+    <img src= "/static/img/product.png" alt="제품"width="130"  ></center>
 
     <br><br>
     <div class="row">
