--- a/main/templates/blog/base.html
+++ b/main/templates/blog/base.html
@@ -36,7 +36,7 @@
         <a href="{% url 'main:home' %}"><img src= "/static/img/home.png" alt="홈페이지"width="75"  ></img></a>
         <a href="https://drive.google.com/file/d/1JkoeM0pJ5CML1XJhlv6k7esTzUaeE3Hn/view?usp=sharing"><img src= "/static/img/intro.png" alt="소개"width="35"  ></img></a>
         <a href="{% url 'main:cal_result' %}"><img src= "/static/img/total.png" alt="열량계산"width="100"  ></img></a>
-        <a href="{% url 'main:test_image' %}"><img src= "/static/img/test.png" alt="테스트 이미지 다운"width="180"  ></img></a>
+        <a href="https://drive.google.com/drive/folders/1B5b0DjCKjVkdnJJaoSIEzMmewn9PU1PZ?usp=sharing"><img src= "/static/img/test.png" alt="테스트 이미지 다운"width="180"  ></img></a>
         &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp 
         &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp
         &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp
